<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/viewfinder_bg"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<FrameLayout
		android:id="@+id/content_frame"
		android:background="@color/viewfinder_bg"
		android:layout_width="match_parent"
		android:layout_height="300dp" >
</FrameLayout>

	<!--
<SurfaceView android:id="@+id/preview_view"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
</SurfaceView>

<com.jwetherell.quick_response_code.ViewfinderView
android:id="@+id/viewfinder_view"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/transparent">
</com.jwetherell.quick_response_code.ViewfinderView>

-->
<LinearLayout android:id="@+id/result_view"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/result_view"
android:gravity="center"
android:visibility="gone"
android:padding="4dip">

<LinearLayout
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:gravity="right|center_vertical">

	<ImageView android:id="@+id/barcode_image_view"
		android:layout_width="160dip"
		android:layout_height="wrap_content"
		android:maxWidth="160dip"
		android:maxHeight="160dip"
		android:layout_marginBottom="4dip"
		android:adjustViewBounds="true"
		android:scaleType="centerInside"
		android:contentDescription="@string/barcode_image">
	</ImageView>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/format_text_view_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/msg_default_format"
			android:textColor="@color/result_minor_text"
			android:textStyle="bold"
			android:textSize="14sp"
			android:paddingRight="4dip">
		</TextView>
		<TextView android:id="@+id/format_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/result_minor_text"
			android:textSize="14sp">
		</TextView>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/type_text_view_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/msg_default_type"
			android:textColor="@color/result_minor_text"
			android:textStyle="bold"
			android:textSize="14sp"
			android:paddingRight="4dip">
		</TextView>
		<TextView android:id="@+id/type_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/result_minor_text"
			android:textSize="14sp">
		</TextView>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/time_text_view_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/msg_default_time"
			android:textColor="@color/result_minor_text"
			android:textStyle="bold"
			android:textSize="14sp"
			android:paddingRight="4dip">
		</TextView>
		<TextView android:id="@+id/time_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/result_minor_text"
			android:textSize="14sp">
		</TextView>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/meta_text_view_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/msg_default_meta"
			android:textColor="@color/result_minor_text"
			android:textStyle="bold"
			android:textSize="14sp"
			android:paddingRight="4dip">
		</TextView>
		<TextView android:id="@+id/meta_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/result_minor_text"
			android:textSize="14sp">
		</TextView>
	</LinearLayout>

</LinearLayout>
</LinearLayout>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="350dp"
		android:background="@color/viewfinder_bg"
		android:layout_gravity="bottom|center_horizontal"
		android:orientation="vertical">

		<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal">



		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"

			>



			<LinearLayout

				android:id="@+id/ButtonGroup"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">




				<LinearLayout
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_gravity="top|center_horizontal"
					android:background="@drawable/layout_bg"
					android:layout_height="wrap_content">


					<LinearLayout
						android:id="@+id/TouchPad"
						android:layout_width="260dip"
						android:layout_height="170dip"


						android:orientation="horizontal">




						<LinearLayout
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_gravity="bottom|right"
android:padding="5dip"
							android:orientation="horizontal">

							<Button
								android:id="@+id/LeftClickButton"
								android:layout_width="0px"
								android:layout_height="28dip"
								android:layout_weight="1"
								android:background="@color/transparent"
								android:color="@color/transparent"
								android:padding="1dip"

								android:text="L"
								tools:ignore="TouchTargetSizeCheck"></Button>

							<Button
								android:id="@+id/RightClickButton"
								android:layout_width="0px"
								android:layout_height="28dip"
								android:layout_weight="1"
								android:background="@color/transparent"
								android:color="@color/transparent"

								android:padding="1dip"

								android:text="R"
								tools:ignore="TouchTargetSizeCheck">
								<!--	android:onClick="RightButtonClickHandler">-->
							</Button>


						</LinearLayout>

					</LinearLayout>



			</LinearLayout>

			</LinearLayout>
			<!-- Add a WebView -->
			<ScrollView
				android:id="@+id/scrlEditText"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"

				tools:ignore="SpeakableTextPresentCheck">

				<LinearLayout
					android:id="@+id/ll_duwv"
					android:layout_width="fill_parent"
					android:layout_height="200dip"
					android:layout_gravity="bottom|center_horizontal"
					android:orientation="vertical">

				</LinearLayout>
			</ScrollView>
		</LinearLayout>

		<!-- This EditText remains hidden. It is used to send keyboard events to the server -->


	</LinearLayout>


	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:visibility="invisible"

		android:orientation="horizontal">

		<Button
			android:id="@+id/keyboardbutton"
			android:layout_width="0px"
			android:layout_height="28dip"
			android:layout_weight="1"
			tools:ignore="TouchTargetSizeCheck"
			android:background="@color/teal_200"
			android:color="@color/teal_200"

			android:padding="1dip"

			android:text="K"></Button>
		<EditText
			android:id="@+id/KeyBoard"
			android:layout_width="20dp"
			android:layout_height="wrap_content"

			android:layout_gravity="left|clip_vertical"
			android:inputType="textVisiblePassword"
			android:minHeight="18dp"
			android:text="K"
			tools:ignore="TouchTargetSizeCheck"></EditText>

	</LinearLayout>
</FrameLayout>